添加es用户名/密码。

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ server.port=9999
 
 spring.data.elasticsearch.repositories.enabled = true
 spring.elasticsearch.rest.uris=localhost:9200
+spring.elasticsearch.rest.username=elastic
+spring.elasticsearch.rest.password=admin
+
